@@ -3695,6 +3695,7 @@ STR_6449    :{WINDOW_COLOUR_2}Tracks:
 STR_6450    :{BLACK}“{STRING}”
 STR_6451    :{BLACK}“{STRING}” - {STRING}
 STR_6452    :{WINDOW_COLOUR_2}Sells: {BLACK}{STRING}
+STR_6453    :Copy version info
 
 #############
 # Scenarios #
