@@ -3949,6 +3949,8 @@ enum
 
     STR_RIDE_OBJECT_SHOP_SELLS = 6452,
 
+    STR_COPY_BUILD_HASH = 6453,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
